# shushunya

./: .gitignore  AGENTS.md  ARCHIVE_MEMORY_ACCESS.md  MODELS_MANIFEST.tsv  README.md  RUNBOOK_WARP_VEILS.md  SHUSHUNYA_CORE_DESIGN.md  boot-stack.sh  fix-permissions.sh  primes.py  requirements.txt  run_old_env_and_test.sh  start-cloudflare-tunnel.sh  start-shushunya-site.sh  stop-cloudflare-tunnel.sh  stop-shushunya-site.sh
ArchiveOfHeresy/: MEMORY_ARCHITECTURE.md  (+40 more)
EyeOfTerror/Warmaster/MobileGateway/ShushunyaAgent/: README.md  STATUS.md  TOOLS.md  pyproject.toml  tool_schema.json
EyeOfTerror/Warmaster/MobileGateway/ShushunyaAgent/scripts/: check-agent-offline.sh  check-agent.sh  self-test.sh  setup-hard-quota.sh  start-agent-api.sh  start-agent-watchdog.sh  start-stack.sh  stop-stack.sh  watch-agent-api.sh
EyeOfTerror/Warmaster/MobileGateway/ShushunyaAgent/shushunya_agent/: __init__.py  self_test.py  server.py  task_journal.py  task_watchdog.py  tool_contract.py  utils.py  verification_contract.py  web_tools.py
Mechanicum/RoxDub/: pyproject.toml
Mechanicum/RoxDub/android/: settings.gradle
Mechanicum/RoxDub/android/app/src/main/java/com/mechanicum/roxdub/: MainActivity.java  StatusForegroundService.java
Mechanicum/RoxDub/roxdub/: __init__.py
ShushunyaDesktop/: .gitignore  README.md  pyproject.toml
ShushunyaDesktop/config/: display_profiles.example.json  screen_roles.example.json
ShushunyaDesktop/docs/: PRODUCT_VISION.md  VISUAL_SYSTEM.md
ShushunyaDesktop/packaging/: shushunya-desktop.desktop.in
ShushunyaDesktop/qml/: ScreenWindow.qml
ShushunyaDesktop/qml/components/: AshField.qml  ChaosFrame.qml  GovernorCard.qml  HeresyField.qml  IncisedText.qml  LivingEnvironment.qml  LivingSeal.qml  QuietHeader.qml  RitualInscription.qml  RuneButton.qml  SparseRunes.qml  StateMark.qml  SystemHeader.qml  ThoughtCard.qml  WarpVeins.qml
ShushunyaDesktop/qml/views/: AmbientView.qml  CanvasView.qml  MindView.qml  PresenceView.qml
ShushunyaDesktop/scripts/: capture-demo-states.sh  capture-formats.sh  capture-previews.sh  capture-states.sh  install-user-launcher.sh  install.sh  restart.sh  run.sh  stop.sh  verify-live.py
ShushunyaDesktop/src/shushunya_desktop/: __init__.py  backend.py  companion.py  demo_state.py  main.py  screen_roles.py
ShushunyaDesktop/tests/: test_backend_demo.py  test_companion_state.py  test_demo_state.py  test_display_profiles.py  test_screen_roles.py  test_visual_assets.py  test_window_placement.py
ShushunyaM/WarpSanctum/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  jni_bridge.h  jni_bridge_llm.cpp  jni_bridge_llm.h  native_llm.cpp  native_llm.h  native_stt.cpp  native_stt.h  native_tts.cpp
ShushunyaM/WarpSanctum/src/main/cpp/ggml/: ggml-cpu.c  ggml-quants.c  ggml.c  ggml.h
(+2446 files in other folders)
