[project]
name = "roxdub"
version = "0.1.0"
description = "Video voice extraction, STT, and translation pipeline."
requires-python = ">=3.12"
dependencies = [
  "demucs>=4.0.1",
  "bs-roformer-infer>=0.1.1",
  "edge-tts>=7.2.0",
  "fastapi>=0.136.0",
  "faster-whisper>=1.0.0",
  "imageio-ffmpeg>=0.6.0",
  "openai>=1.0.0",
  "python-multipart>=0.0.20",
  "scipy>=1.17.0",
  "silero-vad>=6.2.1",
  "soundfile>=0.14.0",
  "uvicorn>=0.49.0",
]

[project.scripts]
roxdub = "roxdub.pipeline:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["roxdub"]
